--- a/app/src/main/res/layout/title_bar.xml
+++ b/app/src/main/res/layout/title_bar.xml
@@ -2,12 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#0000ff" >
+    android:background="#0afaff" >
 
     <Button
         android:id="@+id/left_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_centerVertical="true"
         android:layout_margin="5dp"
         android:background="@drawable/shilipic" />
@@ -18,7 +18,6 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:text="这是标题"
-        android:textColor="#ffffff"
         android:textSize="20sp" />
 
 </RelativeLayout>
