--- a/app/src/main/res/layout/activity_resource.xml
+++ b/app/src/main/res/layout/activity_resource.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -44,7 +45,7 @@
 
             <ImageView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="200dp"
                 android:src="@drawable/layer_drawable_logo" />
 
             <View
@@ -82,7 +83,7 @@
             <ImageView
                 android:id="@+id/image_view"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_300"
+                android:layout_height="@dimen/dp_400"
                 android:background="@drawable/nvshengtouxiang" />
 
             <View
@@ -101,8 +102,9 @@
 
             <Button
                 android:id="@+id/btn_anim"
+                android:text="anim"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_30" />
+                android:layout_height="@dimen/dp_50" />
 
             <View
                 android:layout_width="match_parent"
@@ -114,6 +116,35 @@
                 android:layout_height="@dimen/dp_60"
                 android:orientation="vertical" />
 
+            <EditText
+                android:id="@+id/et_xml"
+                android:hint="演示"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/tv_menu"
+                android:text="按钮"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+
+            <com.fpp.status.customview.AlphaImageView
+                app:duration="5000"
+                android:src="@drawable/nvshengtouxiang"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <Button
+                android:onClick="assets"
+                android:text="播放音频（assets资源）"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_40" />
+            <Button
+                android:onClick="raw"
+                android:text="播放音频（raw资源）"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_40" />
         </LinearLayout>
     </ScrollView>
 
