--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -7,5 +7,11 @@
         <attr name="border_outside_color" format="color"></attr>
     </declare-styleable>
 
+    <!-- 定义一个属性 -->
+    <attr name="duration"></attr>
+    <!-- 定义一个styleable对象来组合多个属性 -->
+    <declare-styleable name="AlphaImageView">
+        <attr name="duration"/>
+    </declare-styleable>
 
 </resources>
