--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -570,7 +570,7 @@
             android:layout_weight="0.5"
             android:background="#ffffff"
             android:scaleType="centerCrop"
-            android:text="==="
+            android:text="android资源使用"
             android:textSize="@dimen/dp_10" />
 
         <Button
@@ -580,7 +580,7 @@
             android:layout_weight="0.5"
             android:background="#ffff00"
             android:scaleType="centerCrop"
-            android:text="==="
+            android:text="权限管理"
             android:textSize="@dimen/dp_10" />
 
         <Button
@@ -590,7 +590,7 @@
             android:layout_weight="0.5"
             android:background="#00ffff"
             android:scaleType="centerCrop"
-            android:text="==="
+            android:text="权限总结"
             android:textSize="@dimen/dp_10" />
 
         <Button
@@ -600,7 +600,7 @@
             android:layout_weight="0.5"
             android:background="#aa95ff"
             android:scaleType="centerCrop"
-            android:text="==="
+            android:text="数据处理"
             android:textSize="@dimen/dp_10" />
 
         <Button
@@ -610,7 +610,7 @@
             android:layout_weight="0.5"
             android:background="#ff00ff"
             android:scaleType="centerCrop"
-            android:text="==="
+            android:text="sd卡文件浏览器"
             android:textSize="@dimen/dp_10" />
 
         <Button
