--- a/app/src/main/res/layout/activity_sqlite.xml
+++ b/app/src/main/res/layout/activity_sqlite.xml
@@ -1,6 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:layout_marginTop="@dimen/dp_23">
+
+    <EditText
+        android:id="@+id/et_atvt_sqlite_one"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_45"
+        android:hint="输入数据" />
+
+    <EditText
+        android:id="@+id/et_atvt_sqlite_two"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_45"
+        android:hint="输入数据" />
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_45">
+        <Button
+            android:text="点击获取输入数据插入并查询展示"
+            android:id="@+id/btn_atvt_sqlite_one"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/dp_45" />
+        <Button
+            android:id="@+id/btn_atvt_sqlite_two"
+            android:layout_width="@dimen/dp_45"
+            android:layout_height="match_parent" />
+    </LinearLayout>
+
+
+
+    <ListView
+        android:id="@+id/lv_atvt_sqlite"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
