--- a/app/src/main/res/layout/line.xml
+++ b/app/src/main/res/layout/line.xml
@@ -12,8 +12,14 @@
             android:layout_width="@dimen/dp_35"
             android:layout_height="match_parent" />
         <TextView
-            android:id="@+id/file_name"
+            android:id="@+id/tv_lvi_title"
             android:text="文件名"
+            android:layout_gravity="center"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/file_name"
+            android:text="内容"
             android:layout_gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
