--- a/app/src/main/res/layout/activity_billing_select.xml
+++ b/app/src/main/res/layout/activity_billing_select.xml
@@ -7,7 +7,6 @@
     <!--主页面-->
     <RelativeLayout
         android:id="@+id/rl_atvt_main_content"
-        android:background="@color/leftMenuWorkNameTextColor"
         android:clipChildren="false"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -50,6 +49,58 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="370dp">
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+
+                <TextView
+                    android:background="@drawable/yuanquan"
+                    android:text="A"
+                    android:textSize="@dimen/sp_20"
+                    android:gravity="center"
+                    android:textColor="#000000"
+                    android:layout_gravity="center"
+                    android:layout_width="@dimen/dp_30"
+                    android:layout_height="@dimen/dp_30" />
+                <TextView
+                    android:background="@drawable/yuanquanblue"
+                    android:text="A"
+                    android:textSize="@dimen/sp_20"
+                    android:gravity="center"
+                    android:textColor="#ffffff"
+                    android:layout_gravity="center"
+                    android:layout_width="@dimen/dp_30"
+                    android:layout_height="@dimen/dp_30" />
+                <TextView
+                    android:background="@drawable/yuanquangreen"
+                    android:text="A"
+                    android:textSize="@dimen/sp_20"
+                    android:gravity="center"
+                    android:textColor="#ffffff"
+                    android:layout_gravity="center"
+                    android:layout_width="@dimen/dp_30"
+                    android:layout_height="@dimen/dp_30" />
+                <TextView
+                    android:background="@drawable/ic_cancel_black_24dp"
+                    android:textSize="@dimen/sp_20"
+                    android:gravity="center"
+                    android:textColor="#ffffff"
+                    android:layout_gravity="center"
+                    android:layout_width="@dimen/dp_30"
+                    android:layout_height="@dimen/dp_30" />
+                <TextView
+                    android:padding="@dimen/dp_6"
+                    android:background="@drawable/yuanquanright"
+                    android:textSize="@dimen/sp_20"
+                    android:gravity="center"
+                    android:textColor="#ffffff"
+                    android:layout_gravity="center"
+                    android:layout_width="@dimen/dp_30"
+                    android:layout_height="@dimen/dp_30" />
+
+            </LinearLayout>
 
             <RelativeLayout
                 android:id="@+id/rl_atvt_main_untreated_order"
