--- a/app/src/main/res/drawable/yuanquangreen.xml
+++ b/app/src/main/res/drawable/yuanquangreen.xml
@@ -1,29 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-
     <item>
-        <shape
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:shape="rectangle">
-            <!-- 填充的颜色 -->
-            <stroke android:color="#ffffff"
-                android:width="2.5dp"/>
-            <!-- 设置按钮的四个角为弧形 -->
-            <!-- android:radius 弧形的半径 -->
+        <shape android:shape="rectangle">
+            <stroke android:width="2.5dp" android:color="#ffffff" />
             <corners android:radius="15dip" />
-            <!-- 填充色 -->
             <solid android:color="#21A675" />
-
-            <!-- padding：Button里面的文字与Button边界的间隔 -->
-           <!-- <padding
-                android:left="10dp"
-                android:right="10dp"
-                />-->
-            <margin
-                android:left="6dp"
-                android:right="6dp"
-                android:top="6dp"
-                android:bottom="6dp"/>
         </shape>
     </item>
 </selector>
