--- a/app/src/main/res/layout/banner_custom_viewpager.xml
+++ b/app/src/main/res/layout/banner_custom_viewpager.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@id/bannerContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -92,10 +93,12 @@
         </LinearLayout>
     </RelativeLayout>
 
-    <ImageView
+    <com.fpp.status.view.RoundImageView
         android:id="@+id/bannerDefaultImage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:visibility="gone" />
+        android:visibility="gone"
+
+        />
 </RelativeLayout>
