--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -776,7 +776,7 @@
                     android:layout_weight="0.5"
                     android:background="#ffff00"
                     android:scaleType="centerCrop"
-                    android:text="轮播广告"
+                    android:text="自定义轮播广告"
                     android:textSize="@dimen/dp_10" />
 
                 <Button
@@ -786,7 +786,7 @@
                     android:layout_weight="0.5"
                     android:background="#00ffff"
                     android:scaleType="centerCrop"
-                    android:text="WEB与Android交互"
+                    android:text="ijk视频播放"
                     android:textSize="@dimen/dp_10" />
 
                 <Button
