--- a/app/src/main/res/layout/uvv_player_controller.xml
+++ b/app/src/main/res/layout/uvv_player_controller.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:id="@+id/rl_content"
     android:background="@android:color/transparent">
 
     <LinearLayout
