--- a/app/src/main/res/layout/activity_ten_seven.xml
+++ b/app/src/main/res/layout/activity_ten_seven.xml
@@ -7,12 +7,14 @@
     <SurfaceView
         android:id="@+id/surfaceView"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_300" />
+        android:layout_height="@dimen/dp_300"
+        android:visibility="gone" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_45"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:visibility="gone">
 
         <Button
             android:id="@+id/bofang"
@@ -33,6 +35,20 @@
             android:layout_height="45dp"
             android:text="停止" />
     </LinearLayout>
+
+    <VideoView
+        android:id="@+id/videoView"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_0"
+        android:layout_weight="1"
+        android:visibility="gone" />
+
+
+    <com.fpp.status.view.videoview.SimpleVideoView
+        android:id="@+id/svv"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_0"
+        android:layout_weight="1" />
 
 
 </LinearLayout>
