--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -48,6 +48,7 @@
     <dimen name="dp_33">33dp</dimen>
     <dimen name="dp_35">35dp</dimen>
     <dimen name="dp_37">37dp</dimen>
+    <dimen name="dp_38">38dp</dimen>
     <dimen name="dp_40">40dp</dimen>
     <dimen name="dp_45">45dp</dimen>
     <dimen name="dp_46">46dp</dimen>
